<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fadeScrollbars="true"
    android:scrollbarSize="15dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/Titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/Titulo"
        android:textColorHint="#000000"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />

    <EditText
        android:id="@+id/etnombres"
        android:layout_width="300dp"
        android:layout_height="44dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/etnombres"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Titulo" />

    <EditText
        android:id="@+id/etapellidos"
        android:layout_width="300dp"
        android:layout_height="44dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/etapellidos"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etnombres" />

    <EditText
        android:id="@+id/dtdireccion"
        android:layout_width="300dp"
        android:layout_height="44dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/dtdireccion"
        android:inputType="textPostalAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etapellidos" />

    <EditText
        android:id="@+id/etmail"
        android:layout_width="300dp"
        android:layout_height="44dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/etmail"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dtdireccion" />

    <EditText
        android:id="@+id/ettelefono"
        android:layout_width="300dp"
        android:layout_height="44dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/ettelefono"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etmail" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="300dp"
        android:layout_height="88dp"
        android:layout_marginTop="12dp"
        android:baselineAligned="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ettelefono">

        <RadioButton
            android:id="@+id/rbmasculino"
            android:layout_width="148dp"
            android:layout_height="44dp"
            android:hint="@string/rbmasculino"
            android:textColorHint="#000000" />

        <RadioButton
            android:id="@+id/rbfemenino"
            android:layout_width="148dp"
            android:layout_height="44dp"
            android:hint="@string/rbfemenino"
            android:textColorHint="#000000" />

    </RadioGroup>

    <Switch
        android:id="@+id/swnovedades"
        android:layout_width="300dp"
        android:layout_height="44dp"
        android:layout_marginTop="12dp"
        android:hint="@string/swnovedades"
        android:textColorHint="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <Button
        android:id="@+id/btregistrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/btregistrar"
        android:onClick="registrar"
        android:textColorHint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/swnovedades"
        app:layout_constraintVertical_bias="0.424" />

</androidx.constraintlayout.widget.ConstraintLayout>